# pylangacq

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  ChangeLog.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  build_docs.py  build_docs.sh  changelog.md  dev-requirements.txt  license.txt  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python.yml  release.yml
chat-syntax-highlighting/: chat-npp.xml  readme.md
doc/source/: chat.rst  conf.py  data.rst  dev.rst  download.rst  grammar.rst  index.rst  metadata.rst  read.rst  reference.rst  transcriptions.rst  tutorial.rst  util.rst
docs/: .buildinfo  CNAME  api.html  api.rst  changelog.html  chat.html  concord.html  conf.py  dependency.html  devmeasures.html  disca.html  download.html  formats.rst  freq.html  frequencies.html  frequencies.rst  genindex.html  headers.html  headers.rst  index.html  index.rst  lex.html  measures.html  measures.rst  metadata.html  objects.inv  phono.html  py-modindex.html  quickstart.html  quickstart.rst  read.html  read.rst  reference.html  requirements.txt  robots.txt  search.html  searchindex.js  sitemap.xml  synsem.html  toc.html  (+6 more)
docs/.doctrees/: chat.doctree  concord.doctree  dependency.doctree  devmeasures.doctree  disca.doctree  download.doctree  environment.pickle  freq.doctree  grammar.doctree  index.doctree  lex.doctree  measures.doctree  metadata.doctree  phono.doctree  read.doctree  reference.doctree  synsem.doctree  toc.doctree  transcriptions.doctree  tutorial.doctree  util.doctree
docs/_modules/: index.html
docs/_modules/pylangacq/: chat.html  dependency.html  measures.html  objects.html  util.html
docs/_static/: alabaster.css  custom.css  documentation_options.js
docs/papers/: tech-report-2016.html  tech-report-2016.py
docs/source/: api.rst  build_docs.py  changelog.rst  chat.rst  concord.rst  conf.py  conftest.py  dependency.rst  devmeasures.rst  disca.rst  download.rst  freq.rst  frequencies.rst  headers.rst  index.rst  lex.rst  measures.rst  metadata.rst  phono.rst  quickstart.rst  read.rst  reference.rst  synsem.rst  toc.rst  transcriptions.rst  tutorial.rst  write.rst
pylangacq/: .flake8  VERSION_DEV  __init__.py  _clean_utterance.py  _punctuation_marks.py  _version.py  chat.py  compat.py  dependency.py  grammar.py  measures.py  objects.py  util.py
pylangacq/tests/: test__clean_utterance.py  test_chat.py  test_chat_new.py  test_dependency.py  test_measures.py  test_util.py  test_version.py
pylangacq/tests/test_data/: README.md  __init__.py  eve.cha
scripts/: check_talkbank_compatibility.py
src/pylangacq/: __init__.py  _clean_utterance.py  _read_chat.py  chat.py  dependency.py  measures.py  objects.py
src/pylangacq/tests/: README.md  __init__.py  eve.cha  test_chat.py
tests/: eve.cha  test__clean_utterance.py  test_chat.py  test_dependency.py  test_objects.py  test_version.py
