[build-system]
requires = ["setuptools >= 65.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylangacq"
version = "0.20.0"
description = "Tools for Language Acquisition Research"
readme = "README.rst"
requires-python = ">= 3.10"
license = { text = "MIT License" }
authors = [ { name = "Jackson L. Lee", email = "jacksonlunlee@gmail.com" } ]
keywords = [
    "CHILDES",
    "TalkBank",
    "language-acquisition",
    "language-development",
]
dependencies = [
    "rustling >= 0.5.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://pylangacq.org"
Source = "https://github.com/jacksonllee/pylangacq"

[project.optional-dependencies]
dev = [
    # Running tests and linters
    "black == 26.1.0",
    "flake8 == 7.3.0",
    "pytest == 9.0.2",

    # Managing source distributions
    "build == 1.4.0",
    "twine == 6.2.0",
]
docs = [
    "furo == 2025.12.19",
    "Sphinx >= 8.1.3",
    "sphinx-copybutton == 0.5.2",
]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.package-data]
pylangacq = ["tests/*"]

[tool.pytest.ini_options]
addopts = "-vv --durations=0 --strict-markers"
testpaths = ["tests"]
