[metadata]
description-file = README.rst
license_file = LICENSE.txt

[bdist_wheel]
universal=1

[flake8]
ignore =
    # E731: no lambda expressions
    E731,
    # W503 line break before binary operator
    W503

[coverage:run]
source = pylangacq/
branch = True

[coverage:report]
show_missing = True
