[metadata]
name = pylangacq
version = 0.16.0
description = Language Acquisition Research in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://pylangacq.org/
project_urls =
    Source = https://github.com/jacksonllee/pylangacq
    Tracker = https://github.com/jacksonllee/pylangacq/issues
    Changelog = https://pylangacq.org/changelog.html
download_url = https://pypi.org/project/pylangacq/#files
author = Jackson L. Lee
author_email = jacksonlunlee@gmail.com
license = MIT License
license_files = LICENSE.txt
keywords =
    computational linguistics
    natural language processing
    NLP
    linguistics
    corpora
    speech
    language
    CHILDES
    CHAT
    transcription
    acquisition
    development
    learning
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: General
    Topic :: Text Processing :: Indexing
    Topic :: Text Processing :: Linguistic

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    importlib-metadata >= 1.0 ; python_version < '3.8'
    python-dateutil >= 2.0.0 , <= 3.0.0
    requests >= 2.18.0 , <= 3.0.0
    tabulate[widechars] >= 0.8.9 , <= 0.9.0
zip_safe = false

[options.package_data]
pylangacq = tests/test_data/*

[coverage:run]
source = pylangacq/
branch = True

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
# Adding -p no:doctest to disable pytest's own doctest,
# which may interfere with Sybil's doctest parsers.
addopts = --verbose --strict-markers -p no:doctest
